--- a/simple-todo-list-next-v14-2-3/tsconfig.json
+++ b/simple-todo-list-next-v14-2-3/tsconfig.json
@@ -19,8 +19,10 @@
             }
         ],
         "paths": {
-            // "@/*": ["./*"],
-            "@/*": ["src/*"]
+            "@src/*": ["src/*"],
+            "@app/*": ["src/app/*"],
+            "@lib/*": ["src/lib/*"],
+            "@types/*": ["src/types/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
